# bract

./: CLAUDE.md  Cargo.toml  README.md
crates/helptext-parser/: Cargo.toml
crates/helptext-parser/src/: error.rs  format.rs  lib.rs  main.rs
crates/helptext-parser/src/parsers/: cobra_helptext.rs  mod.rs  usage_kdl.rs
crates/helptext-parser/tests/: cobra_helptext_test.rs  usage_kdl_test.rs
crates/helptext-parser/tests/common/: mod.rs
crates/helptext-parser/tests/fixtures/cobra-helptext/: mani_0.32.0_list-projects.txt  mani_0.32.0_root.txt  mani_0.32.0_run.txt
crates/helptext-parser/tests/fixtures/usage-kdl/: mise_2026.1.7_tasks-with-choices.kdl
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  event.rs  main.rs
crates/tui/src/data/: commands.rs  mod.rs
crates/tui/src/data/source/: go_buildinfo.rs  mise_tasks.rs  mise_tools.rs  mod.rs
crates/tui/src/ui/: browse.rs  mod.rs
crates/tui/src/ui/form/: field.rs  mod.rs  text_input.rs  toggle.rs
