[package]
name = "bract"
version = "0.2.0"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/hopefullysurprising/bract"

[dependencies]
helptext-parser = { path = "../helptext-parser" }
ratatui = "0.30.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tui-tree-widget = "0.24.0"
